--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -6,6 +6,7 @@
         <item>@font/acme</item>
         <item>@font/adlam_display</item>
         <item>@font/agbalumo</item>
+        <item>@font/asap</item>
         <item>@font/league_spartan_semibold</item>
     </array>
 </resources>
