--- a/app/src/main/res/drawable/button_back.xml
+++ b/app/src/main/res/drawable/button_back.xml
@@ -2,7 +2,7 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#4BD0BE"/>
-    <stroke android:color="#8E8E8E" android:width="2dp"/>
-    <corners android:radius="15dp"/>
+    <stroke android:color="#FFFFFF" android:width="2dp"/>
+    <corners android:radius="10dp"/>
 
 </shape>
