--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -44,6 +44,8 @@
             android:id="@+id/option1TV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:pointerIcon="zoom_in"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -110,6 +112,7 @@
         android:id="@+id/constraintLoad"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -121,7 +124,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Generating situations ..."
-            android:fontFamily="sans-serif-medium"
             android:textSize="28sp"
             android:textColor="@color/black"
             android:layout_marginTop="150dp"
