added in the functionality to choose a subject

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -154,6 +154,20 @@
                     <option value="17">17</option>
                 </select>
 
+
+                <label for="subject">Subject:</label>
+<select id="subject" name="subject" required>
+    <option value="">Select Subject</option>
+    <option value="friends and classmates, teachers and educators">Friends and classmates, teachers and educators</option>
+    <option value="parents, brothers and sisters, grandmothers, grandfathers">Parents, brothers and sisters, grandmothers, grandfathers</option>
+    <option value="animals and insects">Animals and insects</option>
+    <option value="grandmothers, grandfathers, elderly people">Grandmothers, grandfathers, elderly people</option>
+    <option value="strangers, unfamiliar people, passersby, strangers">Strangers, unfamiliar people, passersby, strangers</option>
+    <option value="firefighter, police officer, doctor, salesperson">Firefighter, police officer, doctor, salesperson</option>
+    <option value="relatives, neighbors, acquaintances">Relatives, neighbors, acquaintances</option>
+</select>
+
+
                 <button type="submit">Generate Cases</button>
             </form>
         </div>
