--- a/app/src/main/res/layout/intro_fragment.xml
+++ b/app/src/main/res/layout/intro_fragment.xml
@@ -49,6 +49,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:overScrollMode="never"
+        android:isScrollContainer="false"
         app:layout_constraintBottom_toTopOf="@+id/skipBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
