--- a/app/src/main/res/layout/slider_item.xml
+++ b/app/src/main/res/layout/slider_item.xml
@@ -39,12 +39,14 @@
         android:id="@+id/descriptionTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="46dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="46dp"
         android:text="@string/intro"
         android:textAlignment="center"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView85"
-        app:layout_constraintStart_toStartOf="@+id/textView85"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView85" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
