--- a/app/src/main/res/navigation/intro_nav.xml
+++ b/app/src/main/res/navigation/intro_nav.xml
@@ -7,27 +7,38 @@
 
     <fragment
         android:id="@+id/introFragment"
-        android:name="com.matterofchoice.IntroFragment"
+        android:name="com.matterofchoice.fragment.IntroFragment"
         android:label="IntroFragment"
         tools:layout="@layout/intro_fragment">
         <action
-            android:id="@+id/action_introFragment_to_welcomeFragment"
-            app:destination="@id/welcomeFragment"
+            android:id="@+id/action_introFragment_to_personFragment"
+            app:destination="@id/personFragment"
             app:enterAnim="@anim/from_right" />
     </fragment>
     <fragment
         android:id="@+id/personFragment"
-        android:name="com.matterofchoice.PersonFragment"
+        android:name="com.matterofchoice.fragment.PersonFragment"
         android:label="PersonFragment"
-        tools:layout="@layout/person_fragment"/>
-    <fragment
-        android:id="@+id/welcomeFragment"
-        android:name="com.matterofchoice.WelcomeFragment"
-        android:label="WelcomeFragment"
-        tools:layout="@layout/welcome_fragment">
+        tools:layout="@layout/person_fragment">
         <action
-            android:id="@+id/action_welcomeFragment_to_personFragment"
-            app:destination="@id/personFragment"
+            android:id="@+id/action_personFragment_to_languagesFragment"
+            app:destination="@id/languagesFragment"
             app:enterAnim="@anim/from_right" />
     </fragment>
+    <fragment
+        android:id="@+id/languagesFragment"
+        android:name="com.matterofchoice.fragment.LanguagesFragment"
+        android:label="LanguagesFragment"
+        tools:layout="@layout/languages_fragment">
+        <action
+            android:id="@+id/action_languagesFragment_to_casesFragment"
+            app:destination="@id/casesFragment"
+            app:enterAnim="@anim/from_right"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/casesFragment"
+        android:name="com.matterofchoice.fragment.CasesFragment"
+        android:label="CasesFragment"
+        tools:layout="@layout/cases_layout"/>
 </navigation>
